<resources>
    <string name="app_name">MOBDEVE_GROUP45_MCO</string>
    <string name="breezi">Breezi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="day">Day</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="time">Time</string>
    <string name="_10_day_forecast">10-day forecast</string>
    <string name="_30">30°</string>
    <string name="manila">Manila</string>
    <string name="day_weather_description">Sunny conditions will continue most of the day</string>
    <string name="icon">hourly weather icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>