<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/fragment_login_iv_Login"
        android:layout_width="389dp"
        android:layout_height="426dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@drawable/breezi" />

    <EditText
        android:id="@+id/fragment_login_et_email"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:autofillHints="Email"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login_et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/fragment_login_et_password"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginBottom="276dp"
        android:autofillHints="Password"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_login_btn_signIn"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/button_shape_green"
        android:text="@string/sign_in"
        android:tint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <Button-->
    <!--        android:id="@+id/acitivity_login_btn_signUp"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="68dp"-->
    <!--        android:background="@drawable/button_shape"-->
    <!--        android:text="@string/sign_up"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>